	PR optimization/11634 	* recog.c (split_insn): Factor test of INSN_P and handling of 	set_noop_p out of here into the two callers. 	(split_all_insns): Add INSN_P test and set_noop_p handling here. 	If deleting a no-op set after reload that has a REG_UNUSED note, 	mark the basic block as changed and recalculate life information. 	(split_all_insns_noflow): Add INSN_P test and set_noop_p handling 	here.

* gcc.dg/20031201-2.c: New test case.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@74145 138bc75d-0d04-0410-961f-82ee72b054a4